--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UsersActivity">
-        </activity>
-        <activity android:name=".DetailsTaskActivity">
-        </activity>
+        <activity android:name=".UsersActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".DetailsTaskActivity"
+            android:parentActivityName=".MainActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
